@@ -48,6 +48,7 @@ Carlos Saraiva
 Rich Newpol
 Marcus Brinkmann <marcus.brinkmann@ruhr-uni-bochum.de>
 Chris Fraschetti (http://code.google.com/u/chris.fraschetti/)
+Pavel Mironchyk <p.mironchyk@gmail.com>
 
 
 
