@@ -49,6 +49,7 @@ Copyright: 2009 Scott Koranda <skoranda@gmail.com>
 Copyright: 2009 Rich Newpol (http://code.google.com/u/rich.newpol/)
 Copyright: 2009 Marcus Brinkmann <marcus.brinkmann@ruhr-uni-bochum.de>
 Copyright: 2009 Chris Fraschetti (http://code.google.com/u/chris.fraschetti/)
+Copyright: 2009 Pavel Mironchyk <p.mironchyk@gmail.com>
 
 Files: examples/flowpanel/*
 Copyright: 2009 jordonwii (http://code.google.com/u/jordonwii)
