@@ -1,6 +1,8 @@
                     Changes made to Pyjamas since 0.6
                     ---------------------------------
 
+ * Fix for menu highlighting by Pavel Mironchyk
+
  * Add initial port of python logging module
    Supports logging.StreamHandler (to log to console with print statement) and
    logging.handlers.HTTPHandler (to log to remote webserver)
